fixed dark mode h3 being green

--- a/css/dark.css
+++ b/css/dark.css
@@ -252,6 +252,10 @@ h3.dark-mode {
 <---           Review           -->
 <--- -------------------------- -*/
 
+#experience h3.dark-mode {
+    color: #fff !important;
+}
+
 .reviewer-info h4.dark-mode {
     color: #fff;
 }
